# sshashank124.github.io

./: .gitignore  404.html  Cargo.toml  README.md  common.css  config.toml  index.html  print.css  robots.txt  screen.css  sitemap.xml
.github/workflows/: github-pages.yaml
content/: _index.md
data/: about.json  config.json
docs/: index.html
docs/stylesheets/: print.css  screen.css
public/: 404.html  index.html  style.css
sass/: _colors.sass  common.sass  print.sass  screen.sass  style.sass
src/: data.rs  main.rs
static/fonts/iosevka/: font.css
static/js/: scripts.js
stylesheets/: _colors.scss  _common.scss  print.scss  screen.scss
templates/: 404.html  base.html  index.html  macros.html
templates/logos/: email.html  github.html  phone.html  stackoverflow.html
templates/shortcodes/: section.html
