[package]
name = "personal_website"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
grass = { version = "0.13", default-features = false }
pulldown-cmark = { version = "0.12", default-features = false, features = [
    "html",
] }
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }
tera = { version = "1" }

[lints.clippy]
all = "warn"
complexity = "warn"
pedantic = "warn"
perf = "warn"
nursery = "warn"
suspicious = "warn"
missing_errors_doc = { level = "allow", priority = 1 }
